<resources>
    <string name="app_name">PocketChef</string>
    <string name="tabTitle_home">Home</string>
    <string name="tabTitle_recipes">Recipes</string>
    <string name="tabTitle_cart">Shopping Cart</string>
    <string name="tabTitle_settings">Settings</string>
    <string name="textView">Search</string>
    <string name="searchHint">I want to make a...</string>
    <string name="buttonText_profile">Profile</string>
    <string name="butonText_favRecipes">Favorite Recipes</string>
    <string name="buttonText_shoppingList">Saved Shopping Lists</string>
    <string name="buttonText_signOut">Sign Out</string>
    <string name="imageDesc_detailImage">Dish Image</string>
    <string name="text_sub1">Ingredients</string>
    <string name="text_sub2">Instructions</string>
    <string name="text_sub3">Nutritional Information</string>
    <string name="buttonText_add">Add as Favorite</string>
</resources>