<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tabTitle_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_recipes"
        android:enabled="true"
        android:icon="@drawable/ic_tab_recipes"
        android:title="@string/tabTitle_recipes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_cart"
        android:enabled="true"
        android:icon="@drawable/ic_tab_cart"
        android:title="@string/tabTitle_cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_settings"
        android:enabled="true"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/tabTitle_settings"
        app:showAsAction="ifRoom" />
</menu>