<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDesc_detailImage"
                tools:srcCompat="@drawable/ic_placeholder_background" />

            <TextView
                android:id="@+id/textView_detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green_200"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_sub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sub1"
                android:textSize="20sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView_sub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sub2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_instructionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_sub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sub3"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonText_add" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>